--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,39 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/log_in_background"
+    android:background="@drawable/general_background"
     tools:context=".LogIn">
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="83dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="53dp"
+        android:fontFamily="@font/raleway_extra_light"
+        android:text="Security App"
+        android:textColor="@color/white"
+        android:textSize="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />\
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="180dp"
+        android:fontFamily="@font/raleway_light"
+        android:text="@string/editText_username"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="284dp"
+        android:fontFamily="@font/raleway_light"
+        android:text="@string/editText_password"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/button_log_in"
-
-        android:onClick="LogInActivity"
-
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginStart="161dp"
-        android:layout_marginLeft="161dp"
-        android:layout_marginTop="408dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginRight="162dp"
-        android:src="@drawable/log_in_button"
-        android:clickable="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginEnd="260dp"
+        android:layout_marginRight="260dp"
         android:background="@color/transparent"
+        android:clickable="true"
         android:gravity="center"
+        android:onClick="LogInActivity"
+        android:src="@drawable/log_in_button"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText_password"
-
+        android:inputType="textPassword"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:layout_marginStart="40dp"
@@ -48,6 +77,7 @@
 
     <EditText
         android:id="@+id/editText_username"
+        android:inputType="textShortMessage"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:layout_marginStart="40dp"
