--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -30,7 +30,8 @@
         android:layout_marginEnd="144dp"
         android:layout_marginRight="144dp"
         android:fontFamily="@font/raleway_light"
-        android:text="@string/welcome"
+        android:text="Welcome user!"
+        android:id="@+id/welcome_message"
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
