--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="347dp"
         android:layout_height="83dp"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
@@ -17,7 +17,7 @@
         android:fontFamily="@font/raleway_extra_light"
         android:text="Security App"
         android:textColor="@color/white"
-        android:textSize="60dp"
+        android:textSize="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />\
 
@@ -49,8 +49,10 @@
 
     <ImageButton
         android:id="@+id/button_log_in"
-        android:layout_width="wrap_content"
+        android:layout_width="114dp"
         android:layout_height="48dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginLeft="37dp"
         android:layout_marginTop="400dp"
         android:layout_marginEnd="260dp"
         android:layout_marginRight="260dp"
@@ -61,6 +63,7 @@
         android:src="@drawable/log_in_button"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
